web/app/themes/ppj/src/sass/components/header.sass
.underlined-link
  &:after
    border-bottom-color: $color-white
    border-bottom-style: solid
    border-bottom-width: .3rem
    bottom: -.4rem
    content: ''
    display: block
    height: 0
    opacity: 0
    position: relative
    transition: $main-transition-duration

.header
  background-color: $color-quite-dark
  border-bottom: .4rem solid $color-very-light
  box-sizing: content-box
  z-index: 3

  @include bp('portrait')
    height: initial
    border-bottom-width: .6rem

  @include bp('landscape')
    border-bottom-width: .8rem

  @include bp('large')
    border-bottom-width: 1rem

  .home &
    @include bp('portrait')

  &__hero
    height: 100%
    position: relative

  &__overlay
    display: flex
    flex-direction: column
    height: 100%
    justify-content: flex-end
    position: absolute
    top: 0
    width: 100%

  &__site-header
    background: linear-gradient(to bottom, $color-transparency-dark-start, $color-transparent)
    box-sizing: border-box
    z-index: 1

    &-content
      @extend .l-full
      display: flex
      justify-content: space-between
      margin-bottom: 0
      margin-top: 0
      opacity: 1
      padding: $common-spacing

      @include bp('portrait')
        align-items: center

      @include bp('landscape')
        margin: 0 auto
        max-width: 128.4rem
        padding: $common-spacing * 2

  &__image
    height: 100%
    opacity: 0
    position: relative
    transition: $main-transition-duration
    width: 100%

    &--loaded
      opacity: 1

  &__img-ratio
    height: 0
    padding-bottom: 38.88% // 18rem //56.25%

    @include bp('portrait')
      padding-bottom: 38.88%

    .home &
      padding-bottom: 24.4rem //76.25%

      @include bp('portrait')
        padding-bottom: 43.33%

  &__img-container
    background-color: $color-dark
    background-position: center center
    background-size: cover
    bottom: 0
    position: absolute
    top: 0

    &:after
      background: linear-gradient(60deg, $color-transparency-dark-end 10%, $color-transparent 50%)
      display: block
      content: ''
      position: absolute
      top: 0
      bottom: 0
      left: 0
      right: 0

    .slick-slider
      height: 100%
      margin-bottom: 0

    .slick-list
      height: 100%

    .slick-track
      height: 100%

    .slick-slide
      & > div
        height: 100%

        & > img

    .slick-dots
      bottom: 25px
      display: flex
      justify-content: center
      position: absolute
      width: 100%

      & > li
        margin: $common-spacing/2

        &.slick-active > button
          background: $color-light

      button
        $size: 1rem
        border: $size/5 solid $color-light
        border-radius: $size*4
        color: $color-transparent
        display: block
        height: $size
        padding: 0
        width: $size
        transition: all .2s

        &:before
          display: none

  &__nav-link
    background-color: $color-main
    border: solid .2rem $color-white
    border-radius: $common-spacing * 2
    color: $color-white
    cursor: pointer
    font-weight: $font-weight-bold
    height: 3.6rem
    margin-left: auto
    padding: .3em .7em .3em
    pointer-events: auto
    text-align: center

    @include bp('portrait')
      width: 11.3rem

    @include bp('landscape')
      display: none

    & > div
      background: $color-white
      height: .5rem
      margin-top: .4rem
      width: $common-spacing * 1.5

      &:first-child
        margin-top: 0

  &__nav-menu
    background: $color-dark-transparent
    color: $color-white
    display: none

    @include bp('landscape')
      background-color: $color-transparent
      display: block
      margin-left: auto

  &__nav-menu-close-button
    border: .2rem solid $color-white
    border-radius: 2rem
    display: flex
    height: $common-spacing * 1.5
    justify-content: center
    position: absolute
    right: $common-spacing
    top: $common-spacing
    width: $common-spacing * 1.5

    @include bp('landscape')
      display: none

    &:before
      color: $color-white
      content: "\2715"
      font-size: $common-spacing
      font-weight: $font-weight-bold
      position: relative
      text-align: center
      top: -.05rem

  &__nav-menu-list
    margin-top: 8rem

    @include bp('landscape')
      display: flex
      margin-top: 0
      padding-bottom: $common-spacing * 2

  &__nav-menu-list-element
    $nmle: &
    font-size: 1.8rem
    font-weight: $font-weight-bold
    padding: 0 $common-spacing

    &--selected
      #{$nmle}-text:after
        opacity: 1

      &:after
        @include bp('landscape')
          border-bottom-color: $color-light

    &:hover
      #{$nmle}-text:after
        opacity: 1

    @include bp('landscape')
      border: none
      border-left: .1rem solid $color-light
      font-size: 1.6rem
      height: 2rem
      line-height: 1
      margin-left: $common-spacing
      padding: 0

    @include bp('large')
      font-size: 2rem

    &-text
      @extend .underlined-link
      display: inline-block
      text-align: center

    & > a
      border-bottom: 1px solid $color-white
      color: $color-white
      display: block
      padding: $common-spacing/1.5 0
      width: 100%

      @include bp('landscape')
        border: none
        margin-left: $common-spacing
        padding: 0
        padding-bottom: $common-spacing * .4
        text-transform: uppercase
        width: inherit

        &:after
          transition: border-bottom-color $main-transition-duration

      &[href='']
        color: $color-light
        pointer-events: none
        cursor: default

    &:first-child

      @include bp('landscape')
        border-left: 0

      & > a
        border-top: 1px solid $color-white

        @include bp('landscape')
          border-top: 0

    &-subtext
      font-weight: $font-weight-normal

  &__logo
    @extend .u-wireframe-image
    @include background-img('svg/logo.svg')
    background-color: $color-transparent
    background-repeat: no-repeat
    background-position: center center
    background-size: contain
    display: block
    height: 4rem // 2.35 ratio
    width: 9.4rem
    pointer-events: auto

    @include bp('portrait')
      height: 6.4rem
      width: 15rem

  &__text-container
    margin: $common-spacing

    @include bp('landscape')
      max-width: 128.4rem
      margin: $common-spacing * 2 auto $common-spacing * 4
      padding: 0 $common-spacing * 2

    @include bp('large')
      position: relative

  &__text
    @include u-top-border('large', 'light')
    color: $color-white
    font-size: 2.6rem
    line-height: 3rem

    &, & > p
      font-weight: $font-weight-bold

    @include bp('portrait')
      font-size: 4.2rem
      line-height: 4.8rem

    @include bp('landscape')
      font-size: 5rem
      line-height: 5.6rem

    @include bp('large')
      font-size: 7.2rem
      line-height: 8.2rem

  &__subtext
    color: $color-white
    font-size: 2.2rem
    line-height: 2.8rem
    margin-top: .5em

    @include bp('portrait')
      font-size: 3.4rem
      line-height: 4rem

    @include bp('landscape')
      font-size: 4rem
      line-height: 4.6rem

    @include bp('large')
      font-size: 5.4rem
      line-height: 6.6rem

  &--nav-menu-open
    .header
      &__nav-menu
        display: block
        position: fixed
        top: 0
        bottom: 0
        left: 0
        right: 0
        z-index: 10

        .admin-bar &
          top: 4.6rem

          @include bp('portrait')
            top: 3.2rem

  &--style-dark
    height: auto
    border: none

    .l-site-header
      position: relative

    .header
      &__site-header
        background-color: $color-dark
        background: linear-gradient(60deg, $color-gradient-light, $color-gradient-dark)

      &__hero
        display: none

